--- a/app/src/main/res/layout/modelo_filmes.xml
+++ b/app/src/main/res/layout/modelo_filmes.xml
@@ -14,6 +14,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/imgModeloFilme"
             android:layout_width="150dp"
             android:layout_height="196dp"
             android:layout_marginRight="18dp"
@@ -26,6 +27,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/txtModeloTitulo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="The Contractor"
@@ -40,6 +42,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/txtModeloAno"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5sp"
@@ -52,6 +55,7 @@
                     android:text="-" />
 
                 <TextView
+                    android:id="@+id/txtModeloClassificacao"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5sp"
@@ -66,7 +70,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5sp"
-                    android:text="Legendado" />
+                    android:text="CC" />
 
             </LinearLayout>
 
@@ -86,6 +90,7 @@
                     android:stepSize="1" />
 
                 <TextView
+                    android:id="@+id/txtModeloNotas"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
